--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,21 +1,11 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "CV",
+  "name": "CV Churakov Pavel",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "https://maxcdn.icons8.com/packs/preview-icon/profile.svg",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
-    },
-    {
-      "src": "logo192.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
     }
   ],
   "start_url": ".",
